# eyeonsaur-ha

./: .gitignore  CHANGELOG.md  LICENSE  README.md  coverage.xml  hacs.json  pyproject.toml  requirements-dev.txt  test_consommation_saur.db
custom_components/eyeonsaur/: README.md  __init__.py  config_flow.py  coordinator.py  device.py  device.pyi  manifest.json  models.py  models.pyi  quality_scale.yaml  recorder.py  sensor.py
custom_components/eyeonsaur/helpers/: const.py  dateutils.py  saur_db.py
custom_components/eyeonsaur/translations/: fr.json
tests/: conftest.py  resttest__config_flow.py  test_auth.py  test_config_flow.py  test_config_flow_EyeOnSaurConfigFlow_init.py  test_config_flow_async_step_user.py  test_config_flow_client_factory.py  test_config_flow_credentials_validation.py  test_config_flow_first_check_input.py  test_config_flow_ut1.py  test_config_flow_ut2.py  test_config_flow_ut3.py  test_coordinator.py  test_coordinator_missing_dates.py  test_dateutils.py  test_device.py  test_recorder.py  test_saur_db.py  test_sensor.py  test_version.py
tests/mock/: area.json  auth.json  delivery.json  last.json  mock_saur_server.py  monthly.json  weekly.json
tools/: svg2png.sh
